# brisket

./: .gitignore  .readthedocs.yml  CLAUDE.md  MANIFEST.in  README.md  pyproject.toml  setup.py  test.py
brisket/: __init__.py  brisket.py  config.py  console.py  parameters.py  utils.py
brisket.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
brisket/data/: grid_manager.py
brisket/defaults/: param_fit_default.toml  param_mod_default.toml
brisket/filters/: __init__.py  filter_db.hdf5  filter_set.py  sed.py
brisket/fitting/: __init__.py  check_priors.py  data.py  fit.py  fitted_model.py  fitter.py  posterior.py  prior.py  priors.py
brisket/input/: galaxy.py  spectral_indices.py
brisket/models/: __init__.py  accretion_disk_model.py  agn_line_model.py  agn_models.py  base_models.py  calibration.py  chemical_enrichment_history.py  dust_attenuation_model.py  dust_emission_model.py  igm_model.py  model_galaxy.py  nebular_model.py  sfh_models.py  star_formation_history.py  stellar_model.py  stellar_models.py
brisket/models_old/: chemical_enrichment_history.py  dust_attenuation_model.py  nebular_model.py  star_formation_history.py  stellar_model.py
brisket/tests/: 1_test.py  2_test.py  example_param.toml  models.ipynb  models.py  param_fit_cos66964_flex.toml  param_fit_test.py  param_fit_test.toml  param_mod.toml  test.py  test_dla.py  test_plot.py  test_print.py  (+3 more)
docs/: api.rst  conf.py  custom_models.rst  features.rst  grids.rst  index.rst  models.rst  parameters.rst  parameters2.ipynb  quickstart.rst  requirements.txt
docs_old/: api.rst  cli.rst  conf.py  index.rst  modules.rst  requirements.txt
tests/: test.py  test_numpyro.py
(+130 files in other folders)
