[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"


[project]
name = "brisket"
version = "0.0.1"
description = 'SED fitting'
authors = [
    {name = "Hollis Akins", email = "hollis.akins@gmail.com"},
]
license = {text = 'MIT'}

# Minimum Python version
requires-python = ">=3.11"

# entry-points


# packages=find_packages(include=['brisket','brisket.*']),
dependencies = [
    "astropy>=6.1.2",
    "numpy>2",
    "matplotlib>3.8",
    "scipy",
    "tqdm",
    "spectres",
]

# [project.optional-dependencies]
# # Documentation building
# docs = [
#     "sphinx",
#     "furo",
#     "nbsphinx",
# ]


# [project.scripts]
# brisket = "brisket.cli:main_cli"